# archery-mcp

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  archery-mcp.spec  build-docker.ps1  build-exe.ps1  docker-compose.yml  pyproject.toml
.github/workflows/: build-docker.yml  build-windows-exe.yml  test.yml
scripts/: archery_mcp_entry.py  smoke_test_docker.py  smoke_test_exe.py
src/archery_mcp/: __init__.py  client.py  server.py
tests/: test_client.py
